--- a/src/styles/layout/searchResult.scss
+++ b/src/styles/layout/searchResult.scss
@@ -11,12 +11,12 @@
   min-height: 0;
 
   margin-top: 0.5rem;
-  padding-top: 0.25rem;
 
   .inner-container {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    padding-top: 0.25rem;
 
     display: flex;
     flex-direction: column;
@@ -82,7 +82,7 @@
   cursor: pointer;
   height: fit-content;
   max-height: 100%;
-  padding-top: 0.5rem;
+  padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   width: 100%;
   overflow: visible;
